--- a/project-manager.html
+++ b/project-manager.html
@@ -84,7 +84,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/automationanywhere/job/oZBhafwL'>Automation Anywhere Careers - Sr. Technical Program Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/automationanywhere/job/oZBhafwL'>Automation Anywhere Careers - Sr. Technical Program Manager</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -104,7 +104,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/velodyne/jobs/1795177'>Job Application for Program Manager, R&D at Velodyne</a></h5> 
+<h5><a href='https://boards.greenhouse.io/velodyne/jobs/1795177'>Job Application for Program Manager, R&D at Velodyne</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -146,7 +146,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/farfetch/job/o95DafwL'>Farfetch Careers - Global Sales Program Manager, Private Client</a></h5> 
+<h5><a href='https://jobs.jobvite.com/farfetch/job/o95DafwL'>Farfetch Careers - Global Sales Program Manager, Private Client</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -158,7 +158,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://mainebhr.recruiterbox.com/jobs/fk031x4'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://mainebhr.recruiterbox.com/jobs/fk031x4'>
     Inspection Program Manager - 0748-2 at State of Maine
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -206,7 +206,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/arcticwolfnetworks/jobs/4369175002'>Job Application for Project Manager - Customer Success at Arctic Wolf Networks</a></h5> 
+<h5><a href='https://boards.greenhouse.io/arcticwolfnetworks/jobs/4369175002'>Job Application for Project Manager - Customer Success at Arctic Wolf Networks</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -222,7 +222,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ncianato.referrals.selectminds.com/jobs/translation-project-manager-579'>Translation Project Manager - NATO Careers</a></h5> 
+<h5><a href='https://ncianato.referrals.selectminds.com/jobs/translation-project-manager-579'>Translation Project Manager - NATO Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -234,7 +234,7 @@
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/akqa/jobs/1778248'>Job Application for Senior Project Manager (Melbourne) at AKQA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/akqa/jobs/1778248'>Job Application for Senior Project Manager (Melbourne) at AKQA</a></h5> 
 <p><span class="badge badge-light">Melbourne Melbourne Melbourne</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -242,7 +242,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/akqa/jobs/1793266'>Job Application for Project Manager at AKQA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/akqa/jobs/1793266'>Job Application for Project Manager at AKQA</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -338,11 +338,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://quad.referrals.selectminds.com/jobs/operations-support-project-manager-12688'>Operations Support Project Manager - Be Quad</a></h5> 
+<h5><a href='https://quad.referrals.selectminds.com/jobs/operations-support-project-manager-12688'>Operations Support Project Manager - Be Quad</a></h5> 
 <p><span class="badge badge-light">Arkansas, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://quad.referrals.selectminds.com/jobs/operations-support-project-manager-12689'>Operations Support Project Manager - Be Quad</a></h5> 
+<h5><a href='https://quad.referrals.selectminds.com/jobs/operations-support-project-manager-12689'>Operations Support Project Manager - Be Quad</a></h5> 
 <p><span class="badge badge-light">Arkansas, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -350,11 +350,11 @@
 <p><span class="badge badge-light">Irvine, California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lilium/jobs/1785288'>Job Application for Project Manager - New Factory: Composites Production at Lilium</a></h5> 
+<h5><a href='https://boards.greenhouse.io/lilium/jobs/1785288'>Job Application for Project Manager - New Factory: Composites Production at Lilium</a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/lilium/jobs/1785303'>Job Application for Project Manager - New Factory: Propulsion System Assembly at Lilium</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lilium/jobs/1785303'>Job Application for Project Manager - New Factory: Propulsion System Assembly at Lilium</a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -366,7 +366,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://right-at-school.workable.com/j/12A8FCA636'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://right-at-school.workable.com/j/12A8FCA636'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">Washington, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -426,7 +426,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://right-at-school.workable.com/j/58EDF8831C'>Right At School - Jobs: Education Program Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://right-at-school.workable.com/j/58EDF8831C'>Right At School - Jobs: Education Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
